<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:orientation="vertical"
    android:theme="@style/AppTheme"
    tools:context="com.example.czj.utouch.start.RegisterInformationActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/registerInfo_toolbar"
        style="@style/MainToolBarStyle">

        <TextView
            style="@style/MainToolbarTitleStyle"
            android:text="@string/registerInformation" />
    </android.support.v7.widget.Toolbar>

    <LinearLayout style="@style/MainCenterWrapLayoutStyle">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout style="@style/MainHorizontalLayoutStyle">

                <ImageView style="@style/MainEditInputIconStyle" />

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/registerInfo_nicknameHolder"
                    style="@style/MainEditTextHolderStyle">

                    <EditText
                        android:id="@+id/registerInfo_nicknameEditText"
                        style="@style/MainEditInputStyle"
                        android:hint="@string/nickname"
                        android:text="testAccount" />
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>

            <LinearLayout style="@style/MainHorizontalLayoutStyle">

                <ImageView style="@style/MainEditInputIconStyle" />

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/registerInfo_majorHolder"
                    style="@style/MainEditTextHolderStyle">

                    <EditText
                        android:id="@+id/registerInfo_majorEditText"
                        style="@style/MainEditInputStyle"
                        android:hint="@string/major"
                        android:text="1234" />
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>

            <LinearLayout style="@style/MainHorizontalLayoutStyle">

                <ImageView style="@style/MainEditInputIconStyle" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        style="@style/MainSmallTextStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:layout_marginStart="5dp"
                        android:text="@string/grade" />

                    <Spinner
                        android:id="@+id/registerInfo_gradeSpinner"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:entries="@array/grades" />

                    <TextView
                        android:id="@+id/registerInfo_gradeErrorText"
                        style="@style/MainSmallTextStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:layout_marginStart="5dp"
                        android:text="@string/enterGradeError"
                        android:textColor="@color/red"
                        android:visibility="invisible" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout style="@style/MainHorizontalLayoutStyle">

                <ImageView style="@style/MainEditInputIconStyle" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        style="@style/MainSmallTextStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:layout_marginStart="5dp"
                        android:text="@string/birthday" />

                    <TextView
                        android:id="@+id/registerInfo_birthdayText"
                        style="@style/MainTextStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingBottom="2dp"
                        android:paddingLeft="8dp"
                        android:paddingStart="8dp"
                        android:paddingTop="2dp"
                        android:text="@string/chooseBirthday"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/registerInfo_birthdayErrorText"
                        style="@style/MainSmallTextStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:layout_marginStart="5dp"
                        android:text="@string/enterBirthdayError"
                        android:textColor="@color/red"
                        android:visibility="invisible" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                style="@style/MainHorizontalLayoutStyle"
                android:paddingBottom="10dp"
                android:paddingTop="10dp">

                <ImageView style="@style/MainEditInputIconStyle" />

                <RadioGroup
                    android:id="@+id/registerInfo_sexRadioGroup"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/registerInfo_manRadioButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="80dp"
                        android:layout_marginRight="80dp"
                        android:text="@string/man"
                        android:textSize="22sp" />

                    <RadioButton
                        android:id="@+id/registerInfo_womanRadioButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/woman"
                        android:textSize="22sp" />
                </RadioGroup>
            </LinearLayout>
        </LinearLayout>

        <Button
            android:id="@+id/registerInfo_nextStepButton"
            style="@style/MainLongButtonsStyle"
            android:layout_marginTop="20dp"
            android:text="@string/nextStep" />
    </LinearLayout>
</LinearLayout>
