<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:orientation="vertical"
    android:theme="@style/AppTheme"
    tools:context="com.example.czj.utouch.start.PhoneNumberIdentifyActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/phoneNumberIdentify_toolbar"
        style="@style/MainToolBarStyle">

        <TextView
            android:id="@+id/phoneNumberIdentify_title"
            style="@style/MainToolbarTitleStyle"
            android:text="@string/registerNewAccount" />
    </android.support.v7.widget.Toolbar>

    <LinearLayout style="@style/MainCenterWrapLayoutStyle">

        <LinearLayout style="@style/MainHorizontalLayoutStyle">

            <ImageView style="@style/MainEditInputIconStyle" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/phoneNumberIdentify_usernameHolder"
                style="@style/MainEditTextHolderStyle">

                <EditText
                    android:id="@+id/phoneNumberIdentify_usernameEditText"
                    style="@style/MainEditInputStyle"
                    android:digits="1234567890"
                    android:hint="@string/phoneNumber"
                    android:maxLength="11"
                    android:text="13000000000" />
            </android.support.design.widget.TextInputLayout>
        </LinearLayout>

        <LinearLayout style="@style/MainHorizontalLayoutStyle">

            <ImageView style="@style/MainEditInputIconStyle" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/phoneNumberIdentify_codeHolder"
                style="@style/MainEditTextHolderStyle"
                android:layout_width="0dp"
                android:layout_weight="3">

                <EditText
                    android:id="@+id/phoneNumberIdentify_codeEditText"
                    style="@style/MainEditInputStyle"
                    android:layout_marginEnd="25dp"
                    android:layout_marginRight="25dp"
                    android:digits="1234567890"
                    android:hint="@string/identifyCode"
                    android:maxLength="4"
                    android:text="1234" />
            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/phoneNumberIdentify_sendButton"
                style="@style/MainLongButtonsStyle"
                android:layout_width="0dp"
                android:layout_weight="2"
                android:text="@string/resent"
                android:textSize="14sp" />
        </LinearLayout>

        <Button
            android:id="@+id/phoneNumberIdentify_nextStepButton"
            style="@style/MainLongButtonsStyle"
            android:layout_marginTop="20dp"
            android:text="@string/nextStep" />
    </LinearLayout>
</LinearLayout>
