<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:orientation="vertical"
    android:theme="@style/AppTheme"
    tools:context="com.example.czj.utouch.start.LoginActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/login_toolbar"
        style="@style/MainToolBarStyle">

        <TextView
            style="@style/MainToolbarTitleStyle"
            android:text="@string/login" />
    </android.support.v7.widget.Toolbar>

    <LinearLayout style="@style/MainCenterWrapLayoutStyle">

        <ImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_gravity="center"
            android:layout_marginBottom="10dp"
            android:src="@mipmap/ic_launcher" />

        <LinearLayout style="@style/MainHorizontalLayoutStyle">

            <ImageView style="@style/MainEditInputIconStyle" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/login_usernameHolder"
                style="@style/MainEditTextHolderStyle">

                <EditText
                    android:id="@+id/login_usernameEditText"
                    style="@style/MainEditInputStyle"
                    android:digits="1234567890"
                    android:hint="@string/phoneNumber"
                    android:inputType="phone"
                    android:maxLength="11"
                    android:text="12345678910" />
            </android.support.design.widget.TextInputLayout>
        </LinearLayout>

        <LinearLayout style="@style/MainHorizontalLayoutStyle">

            <ImageView style="@style/MainEditInputIconStyle" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/login_passwordHolder"
                style="@style/MainEditTextHolderStyle">

                <EditText
                    android:id="@+id/login_passwordEditText"
                    style="@style/MainEditInputStyle"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:text="test123" />
            </android.support.design.widget.TextInputLayout>
        </LinearLayout>

        <Button
            android:id="@+id/login_loginButton"
            style="@style/MainLongButtonsStyle"
            android:layout_marginTop="10dp"
            android:text="@string/login" />

        <RelativeLayout
            style="@style/MainHorizontalLayoutStyle"
            android:layout_marginTop="15dp">

            <TextView
                android:id="@+id/login_registerTextView"
                style="@style/MainTextStyle"
                android:text="@string/registerNewAccount" />

            <TextView
                android:id="@+id/login_forgetTextView"
                style="@style/MainTextStyle"
                android:layout_alignParentRight="true"
                android:text="@string/forgetPassword" />
        </RelativeLayout>
    </LinearLayout>
</LinearLayout>