<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:orientation="vertical"
    android:theme="@style/AppTheme"
    tools:context="com.example.czj.utouch.start.SetPasswordActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/setPassword_toolbar"
        style="@style/MainToolBarStyle">

        <TextView
            style="@style/MainToolbarTitleStyle"
            android:text="@string/setPassword" />
    </android.support.v7.widget.Toolbar>

    <LinearLayout style="@style/MainCenterWrapLayoutStyle">

        <LinearLayout style="@style/MainHorizontalLayoutStyle">

            <ImageView style="@style/MainEditInputIconStyle" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/setPassword_passwordHolder"
                style="@style/MainEditTextHolderStyle">

                <EditText
                    android:id="@+id/setPassword_passwordEditText"
                    style="@style/MainEditInputStyle"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:text="a123456" />
            </android.support.design.widget.TextInputLayout>
        </LinearLayout>

        <LinearLayout style="@style/MainHorizontalLayoutStyle">

            <ImageView style="@style/MainEditInputIconStyle" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/setPassword_checkPasswordHolder"
                style="@style/MainEditTextHolderStyle">

                <EditText
                    android:id="@+id/setPassword_checkPasswordEditText"
                    style="@style/MainEditInputStyle"
                    android:hint="@string/checkPassword"
                    android:inputType="textPassword"
                    android:text="a123456" />
            </android.support.design.widget.TextInputLayout>
        </LinearLayout>

        <Button
            android:id="@+id/setPassword_nextStepButton"
            style="@style/MainLongButtonsStyle"
            android:layout_marginTop="20dp"
            android:text="@string/nextStep" />
    </LinearLayout>
</LinearLayout>