<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:theme="@style/AppTheme"
    tools:context="com.example.czj.utouch.user.UserFragment">

    <LinearLayout
        android:id="@+id/user_head"
        style="@style/UserHeadLayout">

        <de.hdodenhof.circleimageview.CircleImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:elevation="2dp"
            android:src="@drawable/ic_user"
            app:civ_border_color="@color/lightgray"
            app:civ_border_width="1dp" />

        <TextView
            style="@style/UserHeadText"
            android:text="用户名" />

        <ImageView
            style="@style/UserArrow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <ImageView style="@style/Divider" />

    <LinearLayout style="@style/WrapLayout">

        <LinearLayout
            android:id="@+id/user_subscribe"
            style="@style/UserOptionsLayout">

            <ImageView
                style="@style/UserIconLayout"
                android:src="@drawable/ic_user" />

            <TextView
                style="@style/UserOptionsText"
                android:text="@string/mySubscribe" />

            <ImageView style="@style/UserArrow" />
        </LinearLayout>

        <ImageView style="@style/Divider" />

        <LinearLayout
            android:id="@+id/user_activity"
            style="@style/UserOptionsLayout">

            <ImageView
                style="@style/UserIconLayout"
                android:src="@drawable/ic_add" />

            <TextView
                style="@style/UserOptionsText"
                android:text="@string/myActivity" />

            <ImageView style="@style/UserArrow" />
        </LinearLayout>

        <ImageView style="@style/Divider" />

        <LinearLayout
            android:id="@+id/user_setting"
            style="@style/UserOptionsLayout">

            <ImageView
                style="@style/UserIconLayout"
                android:src="@drawable/ic_user" />

            <TextView
                style="@style/UserOptionsText"
                android:text="@string/setting" />

            <ImageView style="@style/UserArrow" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        style="@style/WrapLayout"
        android:layout_marginBottom="0dp"
        android:padding="0dp">


        <LinearLayout
            android:id="@+id/user_logoff"
            style="@style/UserOptionsLayout"
            android:background="@color/indianred"
            android:padding="15dp">

            <TextView
                style="@style/UserOptionsText"
                android:gravity="center"
                android:text="@string/off"
                android:textColor="@color/white" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
