<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:orientation="vertical"
    android:theme="@style/AppTheme"
    tools:context="com.example.czj.utouch.start.StudentIdentifyActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/studentIdentify_toolbar"
        style="@style/MainToolBarStyle">

        <TextView
            style="@style/MainToolbarTitleStyle"
            android:text="@string/studentIdentify" />
    </android.support.v7.widget.Toolbar>

    <LinearLayout style="@style/MainCenterWrapLayoutStyle">

        <LinearLayout style="@style/MainHorizontalLayoutStyle">

            <ImageView style="@style/MainEditInputIconStyle" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/studentIdentify_studentCardNumberHolder"
                style="@style/MainEditTextHolderStyle">

                <EditText
                    android:id="@+id/studentIdentify_studentCardNumberEditText"
                    style="@style/MainEditInputStyle"
                    android:hint="@string/studentCardNumber"
                    android:inputType="number"
                    android:maxLength="13"
                    android:text="2016302580292" />
            </android.support.design.widget.TextInputLayout>
        </LinearLayout>

        <LinearLayout style="@style/MainHorizontalLayoutStyle">

            <ImageView style="@style/MainEditInputIconStyle" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/studentIdentify_studentPasswordHolder"
                style="@style/MainEditTextHolderStyle">

                <EditText
                    android:id="@+id/studentIdentify_studentPasswordEditText"
                    style="@style/MainEditInputStyle"
                    android:hint="@string/studentPassword"
                    android:inputType="textPassword"
                    android:text="020255" />
            </android.support.design.widget.TextInputLayout>
        </LinearLayout>

        <LinearLayout style="@style/MainHorizontalLayoutStyle">

            <ImageView style="@style/MainEditInputIconStyle" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/studentIdentify_identifyCodeHolder"
                style="@style/MainEditTextHolderStyle"
                android:layout_width="0dp"
                android:layout_weight="1">

                <EditText
                    android:id="@+id/studentIdentify_identifyCodeEditText"
                    style="@style/MainEditInputStyle"
                    android:hint="@string/identifyCode"
                    android:text="1234"/>
            </android.support.design.widget.TextInputLayout>

            <ImageView
                android:id="@+id/studentIdentify_identifyCodeImageView"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:src="@color/colorAccent" />
        </LinearLayout>

        <Button
            android:id="@+id/studentIdentify_nextStepButton"
            style="@style/MainLongButtonsStyle"
            android:layout_marginTop="20dp"
            android:text="@string/studentIdentify" />
    </LinearLayout>
</LinearLayout>
